# xiao-long-xia-tools

./: .coverage  .gitignore  .gitkeep  CONTRIBUTING.md  GITEE_SETUP.md  IDENTITY.md  LICENSE  README.md  SEARCH_SETUP_INSTRUCTIONS.md  SOUL.md  USER.md  account-manager.json  agent_architecture.md  agent_communication_protocol.md  agent_management.md  agent_system_summary.md  ai-tools-tutorial-zh.md  analyze_paperclip.py  analyze_paperclip_simple.py  api-usage-monitor.md  backup-immediate-action.md  content-creation-plan.md  content-platforms-passwords.md  content-platforms-setup.md  executor_config.md  feature-roadmap.md  fiverr-optimization-guide.md  fiverr-profile-content.md  fiverr-service-templates.md  fiverr-setup-guide.md  gitee-backup-setup.md  gitee-registration-plan.md  github-project-setup.md  github-sponsors-setup.md  income-tracker.html  install-cli-test.md  knowledge-base  opencode-task.txt  paperclip_agent_mapping.md  paperclip_integration_plan.md  (+17 more)
.github/: FUNDING.yml
.github/workflows/: dependencies.yml  quality.yml  release.yml  test.yml
.openclaw/: workspace-state.json
docs/: API.md  SPONSORSHIP.md  TUTORIAL.md
examples/python/: chatgpt_example.py
memory/: 2026-03-09.md  2026-03-10-ai-income-collection.md  2026-03-10-ai-income-task.md  2026-03-10-ai-income-tasks.md  2026-03-10-git-workflow.md  2026-03-10-openclaw-workspace-conflict.md  2026-03-10-ssh-akash-setup.md  2026-03-10.md  income-system.md  project-development.md  test-commit.md  user-feedback.md
projects/self-improvement/: SKILL.md
src/xiao_long_xia/: __init__.py  ai_utils.py  cli.py  data_utils.py  dev_utils.py  file_utils.py
src/xiao_long_xia_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_data_utils.py  test_data_utils_simple.py  test_file_utils.py
tutorials/basic-tools/: chatgpt-basics.md
